fixes regression from changing naming on layout helpers

--- a/ui/sections/storage/inspectors/volume.reel/volume.html
+++ b/ui/sections/storage/inspectors/volume.reel/volume.html
@@ -141,7 +141,7 @@
         </div>
         <div data-montage-id="allocationBar" class="Volume-allocationBar"></div>
         <div data-montage-id="inspector">
-            <div data-montage-id="shares" class="g-negative-margin-top"></div>
+            <div data-montage-id="shares" class="g-margin-top--subtract"></div>
             <div data-montage-id="snapshots"></div>
             <div data-montage-id="topology"></div>
             <div data-montage-id="datasets"></div>
