Improvements with Iscsi inspector. Ticket: #18846

--- a/ui/sections/storage/inspectors/share.reel/iscsi-share.reel/iscsi-share.html
+++ b/ui/sections/storage/inspectors/share.reel/iscsi-share.reel/iscsi-share.html
@@ -12,13 +12,14 @@
         },
 
         "numberConverter": {
-            "prototype": "core/converter/integer-converter"
+            "prototype": "core/converter/string-to-integer-or-null-converter"
         },
 
         "extentSize": {
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "extentSize"},
+                "converter": {"@": "numberConverter"},
                 "label": "Size"
             },
             "bindings": {
