Make size field mandatory Ticket: #18845

--- a/ui/sections/storage/inspectors/share.reel/iscsi-share.reel/iscsi-share.html
+++ b/ui/sections/storage/inspectors/share.reel/iscsi-share.reel/iscsi-share.html
@@ -19,6 +19,7 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "extentSize"},
+                "isMandatory": true,
                 "label": "Size"
             },
             "bindings": {
