--- a/ui/sections/storage/inspectors/share.reel/share.html
+++ b/ui/sections/storage/inspectors/share.reel/share.html
@@ -67,6 +67,7 @@
             },
             "bindings": {
                 "canDelete": {"<-": "!@owner.object._isNew"},
+                "isSaveDisabled": {"<-": "(@owner.targetType == 'ZVOL' && !@owner.object.properties.size)"},
                 "context": {"<-": "@owner.context"}
             }
         },
