Hide size field when target type is FILE.

--- a/ui/sections/storage/inspectors/share.reel/iscsi-share.reel/iscsi-share.html
+++ b/ui/sections/storage/inspectors/share.reel/iscsi-share.reel/iscsi-share.html
@@ -23,7 +23,8 @@
                 "label": "Size"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.properties.size"}
+                "value": {"<->": "@owner.object.properties.size"},
+                "classList.has('is-hidden')": {"<-": "@owner.object._target_type == 'FILE'"}
             }
         },
 
