Fix bad condition for the save button within the kerberos-keytab inspector.

--- a/ui/sections/accounts/inspectors/kerberos-keytab.reel/kerberos-keytab.html
+++ b/ui/sections/accounts/inspectors/kerberos-keytab.reel/kerberos-keytab.html
@@ -28,7 +28,7 @@
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
-                "isSaveDisabled": {"<-": "(@owner.object._isNew && (!@owner.keytab || !@owner.object.name)) || (!@owner.object._isNew && !!@owner.object.name)"},
+                "isSaveDisabled": {"<-": "(@owner.object._isNew && (!@owner.keytab || !@owner.object.name)) || (!@owner.object._isNew && !@owner.object.name)"},
                 "canDelete": {"<-": "!@owner.object._isNew"},
                 "canRevert": {"<-": "!@owner.object._isNew"}
             }
