ADDED: file upload

--- a/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate-import.reel/crypto-certificate-import.html
+++ b/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate-import.reel/crypto-certificate-import.html
@@ -15,7 +15,7 @@
             "properties": {
                 "element": {"#": "certificate"},
                 "label": "Certificate",
-                "resultType": "binary"
+                "resultType": "text"
             },
             "bindings": {
                 "data": {"<->": "@owner.certificateFile"},
