--- a/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate.html
+++ b/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate.html
@@ -11,6 +11,9 @@
                 "inspector": {"@": "inspector"},
                 "validationController": {"@": "validationController"}
             },
+            "bindings": {
+                "certificateComponent": {"<-": "@certificateActionPlaceHolder.component"}
+            },
             "listeners": [
                 {
                     "type": "action",
