Disable WebUI button when the container is off.

--- a/ui/sections/containers/inspectors/container.reel/container.html
+++ b/ui/sections/containers/inspectors/container.reel/container.html
@@ -52,7 +52,8 @@
                 "value": "Web UI"
             },
             "bindings": {
-                "classList.has('is-hidden')": {"<-": "!@owner.object.web_ui_url"}
+                "classList.has('is-hidden')": {"<-": "!@owner.object.web_ui_url"},
+                "disabled": {"<-": "@stop.disabled"}
             }
         },
 
