fixes treeview styles due to class position

--- a/ui/controls/tree-view.reel/current-node.reel/current-node.html
+++ b/ui/controls/tree-view.reel/current-node.reel/current-node.html
@@ -34,7 +34,8 @@
             "prototype": "blue-shark/ui/scrollview.reel",
             "properties": {
                 "element": {"#": "scrollview"},
-                "overflow": "scrollY"
+                "overflow": "scrollY",
+                "hasFixedFooter": false
             }
         },
         "childNodes": {
