ADDED: health check interval for FreeNAS type

--- a/ui/sections/peering/inspectors/freenas-credentials.reel/freenas-credentials.html
+++ b/ui/sections/peering/inspectors/freenas-credentials.reel/freenas-credentials.html
@@ -103,6 +103,16 @@
             "bindings": {
                 "value": {"<-": "@owner.object.status.rtt * 1000 + ' ms'"}
             }
+        },
+        "healthCheck":{
+            "prototype": "blue-shark/ui/field-text.reel",
+            "properties": {
+                "element": {"#": "healthCheck"},
+                "label": "Health Check Interval"
+            },
+            "bindings": {
+                "value": {"<-": "@owner.object.health_check_interval + ' s'"}
+            }
         }
     }
     </script>
