Add version column for Docker images.

--- a/ui/sections/containers/controls/docker-image-search.reel/docker-image-search.html
+++ b/ui/sections/containers/controls/docker-image-search.reel/docker-image-search.html
@@ -41,6 +41,10 @@
                     {
                         "value": "description",
                         "path": "description"
+                    },
+                    {
+                        "value": "version",
+                        "path": "version"
                     }
                 ]
             },
