ADDED: entry for encryptionActions

--- a/ui/sections/storage/inspectors/volume.reel/volume.html
+++ b/ui/sections/storage/inspectors/volume.reel/volume.html
@@ -145,9 +145,11 @@
             <div data-montage-id="snapshots"></div>
             <div data-montage-id="topology"></div>
             <div data-montage-id="datasets"></div>
+            <div data-montage-id="encryptionActions"></div>
             <div data-arg="footer-additional-button" class="ActionButtons">
                 <div data-montage-id="export"></div>
                 <div data-montage-id="scrub"></div>
+
             </div>
         </div>
     </div>
