--- a/ui/inspectors/user.reel/user.html
+++ b/ui/inspectors/user.reel/user.html
@@ -38,9 +38,9 @@
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
-                "canDelete": {"<-": "!@owner.object.origin.read_only"},
-                "canRevert": {"<-": "!@owner.object.origin.read_only"},
-                "canSave": {"<-": "!@owner.object.origin.read_only"},
+                "canDelete": {"<-": "!@owner.object.builtin || !@owner.object.origin.read_only"},
+                "canRevert": {"<-": "(@owner.object.uid == 0) || !@owner.object.builtin || !@owner.object.origin.read_only"},
+                "canSave": {"<-": "(@owner.object.uid == 0) || !@owner.object.builtin || !@owner.object.origin.read_only"},
                 "extraDeleteFlags": {"<-": "@owner.extraDeleteFlags"}
             }
         },
@@ -63,7 +63,7 @@
                 "element": {"#": "uidNameSubstitution"}
             },
             "bindings": {
-                "switchValue": {"<-": "!!@owner.object.origin.read_only ? 'system' : 'luser'"}
+                "switchValue": {"<-": "!!@owner.object.builtin || @owner.object.origin.read_only ? 'system' : 'luser'"}
             }
         },
         "systemUserSubstitution": {
