Because Thibault sed so :) - new dc service Ticket: #18831

--- a/ui/inspectors/service.reel/service.html
+++ b/ui/inspectors/service.reel/service.html
@@ -63,7 +63,9 @@
             },
             "bindings": {
                 "moduleId": {"<-": "'ui/inspectors/service.reel/' + @owner.name + '-service.reel'"},
-                "object": {"<-": "@owner.object.config"}
+                "object": {"<-": "@owner.object.config"},
+                "context": {"<-": "@owner.context"}
+
             }
         }
     }
