cleans up kerberos tabs entries table

--- a/ui/sections/accounts/inspectors/kerberos-keytab.reel/kerberos-keytab.html
+++ b/ui/sections/accounts/inspectors/kerberos-keytab.reel/kerberos-keytab.html
@@ -88,7 +88,7 @@
         <div data-montage-id="inspector">
             <div data-montage-id="name"></div>
             <div data-montage-id="keytab"></div>
-            <div data-montage-id="entries"></div>
+            <div data-montage-id="entries" class="KerberosKeytab-entries"></div>
         </div>
     </div>
 </body>
