Fix container console configuration

--- a/ui/console.reel/console.html
+++ b/ui/console.reel/console.html
@@ -9,6 +9,9 @@
             "properties": {
                 "element": {"#": "owner"},
                 "terminalElement": {"#": "terminal"}
+            },
+            "bindings": {
+                "configurationKey": {"<-": "(@owner.type || 'shell') + 'Configuration'"}
             }
         }
     }
