--- a/ui/sections/containers/inspectors/docker-logs.reel/docker-logs.html
+++ b/ui/sections/containers/inspectors/docker-logs.reel/docker-logs.html
@@ -14,7 +14,8 @@
             "prototype": "ui/console.reel",
             "properties": {
                 "element": {"#": "console"},
-                "waitForToken": true
+                "waitForToken": true,
+                "type": "console"
             },
             "bindings": {
                 "token": {"<-": "@owner.token"}
