fixes layout issue on custom schedule option button

--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -274,7 +274,7 @@
                     <p class="g-margin-right--half bold">Occuring at:</p>
                 </div>
                 <div data-arg="CUSTOM">
-                    <div data-montage-id="customOptionButton" class="g-margin-h--subtract"></div>
+                    <div data-montage-id="customOptionButton"></div>
                 </div>
             </div>
             <div data-montage-id="optionTimeCondition">
