--- a/ui/controls/list.reel/list-item.reel/list-item.html
+++ b/ui/controls/list.reel/list-item.reel/list-item.html
@@ -37,6 +37,15 @@
                 "moduleId": {"<-": "@owner.userInterfaceDescriptor.iconValueExpression.defined() && !!@owner.userInterfaceDescriptor.iconValueMapping[@owner.object.path(@owner.userInterfaceDescriptor.iconValueExpression)] ? @owner.userInterfaceDescriptor.iconValueMapping[@owner.object.path(@owner.userInterfaceDescriptor.iconValueExpression)] : @owner.userInterfaceDescriptor.iconComponentModule.id"},
                 "object": {"<-": "@owner.object"}
             }
+        },
+        "info": {
+            "prototype": "montage/ui/text.reel",
+            "properties": {
+                "element": {"#": "info"}
+            },
+            "bindings": {
+                "value": {"<-": "@owner.object.path(@owner.userInterfaceDescriptor.infoExpression)"}
+            }
         }
     }
     </script>
@@ -47,6 +56,7 @@
         <div data-montage-id="status" class="ListItem-status"></div>
         <div data-montage-id="iconImagePlaceholder" class="ListItem-icon"></div>
         <div data-montage-id="label" class="ListItem-label"></div>
+        <div data-montage-id="info" class="ListItem-info"></div>
         <div class="ListItem-arrow">
             <svg><use xlink:href="#i-arrow"/></svg>
         </div>
