updated disk I/O widget to use geom_stat source

--- a/ui/widgets/disk-traffic.reel/disk-traffic.html
+++ b/ui/widgets/disk-traffic.reel/disk-traffic.html
@@ -33,15 +33,7 @@
                 "isTimeSeries": false,
                 "graphType": "stackedBar",
                 "xAxisLable": -90,
-                "metrics": [
-                    ["disk_octets", "read"],
-                    ["disk_octets", "write"]
-                ],
-                "removePrefix": "disk_octets.",
-                "removeSourcePrefix": "disk-"
-            },
-            "bindings": {
-                "sources": {"<-": "@owner.disks.map{'disk-' + name}"}
+                "delegate": {"@": "owner"}
             }
         }
     }
