if list item has a label value it should be shown by default unless a control changes the setting

--- a/ui/accounts/accounts-list-options.reel/accounts-list-options.html
+++ b/ui/accounts/accounts-list-options.reel/accounts-list-options.html
@@ -6,7 +6,8 @@
     {
         "owner": {
             "properties": {
-                "element": {"#": "owner"}
+                "element": {"#": "owner"},
+                "showSubLabel": false
             }
         },
         "checkbox": {
@@ -16,7 +17,7 @@
                 "label": "show domain names"
             },
             "bindings": {
-                "checked": {"<->": "@owner.hasSubLabel"}
+                "checked": {"<->": "@owner.showSubLabel"}
             }
         }
     }
