--- a/ui/controls/list.reel/list.html
+++ b/ui/controls/list.reel/list.html
@@ -31,7 +31,7 @@
             "bindings": {
                 "moduleId": {"<-": "@owner.listItemModuleId"},
                 "object": {"<-": "@repetition:iteration.object"},
-                "component.hasSubLabel": {"<-": "@owner.hasSubLabel"}
+                "component.showSubLabel": {"<-": "@owner.showSubLabel"}
             }
         }
     }
