cleans up docker image search Ticket: #18891

--- a/ui/sections/containers/controls/docker-image-search.reel/docker-image-search.html
+++ b/ui/sections/containers/controls/docker-image-search.reel/docker-image-search.html
@@ -59,7 +59,7 @@
 <body>
     <div data-montage-id="owner" class="DockerImageSearch">
         <div data-montage-id="collection"></div>
-        <div data-montage-id="image"></div>
+        <div data-montage-id="image" class="DockerImageSearch-table"></div>
         <div data-montage-id="searching"></div>
     </div>
 </body>
