Fix replication source dataset selection

--- a/ui/controls/field-treeview.reel/field-treeview.html
+++ b/ui/controls/field-treeview.reel/field-treeview.html
@@ -11,6 +11,7 @@
                 "pathInput": {"@": "pathInput"}
             },
             "bindings": {
+                "displayedPath": {"<-": "@pathInput.value"},
                 "classList.has('is-expanded')": {"<-": "@owner.isExpanded"}
             },
             "listeners": [
