--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -12,7 +12,10 @@
                 "inspector": {"@": "inspector"},
                 "selectedWeekDays": ["sunday"],
                 "selectedScheduleOption": "month",
-                "selectedDaysOfMonth": [1]
+                "selectedDaysOfMonth": [1],
+                "argsInspector": {
+                    "replication.replicate_dataset": {"@": "replication"}
+                }
             }
         },
         "optionsConverter": {
