--- a/ui/inspectors/calendar-task.reel/replication-args.reel/replication-args.html
+++ b/ui/inspectors/calendar-task.reel/replication-args.reel/replication-args.html
@@ -8,7 +8,8 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"},
-                "datasetTreeController": {"@": "datasetTreeController"}
+                "datasetTreeController": {"@": "datasetTreeController"},
+                "sourceDataset": {"@": "sourceDataset"}
             }
         },
         "datasetTreeController": {
