DELETED: class css

--- a/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate-import.reel/crypto-certificate-import.html
+++ b/ui/sections/system/inspectors/crypto-certificate.reel/crypto-certificate-import.reel/crypto-certificate-import.html
@@ -18,8 +18,7 @@
                 "resultType": "text"
             },
             "bindings": {
-                "data": {"<->": "@owner.certificateFile"},
-                "classList.has('is-hidden')": {"<-": "!@owner.object._isNew"}
+                "data": {"<->": "@owner.certificateFile"}
             }
         },
         "privateKey": {
